[tool.poetry]
name = "repos"
version = "0.1.0"
description = "LNbits Clients Monorepo"
authors = ["Alan Bits <alan@lnbits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
lnbits = "^0.10.3.dev1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
